--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,8 +364,9 @@ margin-bottom: 50px;
     .contact-heading {
         font-family: "EXO", sans-serif;
         font-weight: 300;
-        margin-top: 25px;
+        margin-top: 80px;
         margin-bottom: 20px;
+        font-size: 35px;
     }
 
     /*.center-form {
@@ -382,13 +383,14 @@ margin-bottom: 50px;
     } */
 
     .gallery {
-        margin: 20px 34px;
+        margin: 60px 55px;
     }
 
     .gallery img {
         width: 300px;
         height: 300px;
-        margin: 3px;
+        margin: 2px;
+        margin-bottom: 3px;
     }
 
 
