--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ header {
 }
 
 .logo {
-  background: url("../images/resumepic.jpg");
+  background: url("../images/profile_photo.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
